@@ -1,5 +1,6 @@
 [1.5.7]
 - API Change: GlyphLayout xAdvances now have an additional entry at the beginning. This was required to implement tighter text bounds. #3034
+- API Change: Label#getTextBounds changed to getGlyphLayout. This exposes all the runs, not just the width and height.
 
 [1.5.6]
 - API Change: Refactored Window. https://github.com/libgdx/libgdx/commit/7d372b3c67d4fcfe4e82546b0ad6891d14d03242
